<resources>
    <string name="app_name">pedidosApp</string>
    <string name="hint">Para continuar debe de iniciar sesion</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Iniciar Sesion</string>
    <string name="title_activity_menu">Inicio</string>

    <!-- Tabs names -->
    <string name="tab_text_1">Resumen</string>
    <string name="tab_text_2">Pedidos</string>
    <string name="tab_text_3">Articulos</string>
    <string name="tab_text_4">Clientes</string>


    <!-- Buttons Strings -->
    <string name="crear">Crear</string>
    <string name="modifciar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="listar">Listar</string>
    <string name="cancelarB">Cancelar</string>

    <!-- clientCreation Strings (B boton, T texto) -->

    <string name="agregarClienteT">Agregar Nuevo Cliente</string>

    <!-- articulosCreacion Strings (B boton, T texto, H hint) -->

    <string name="agregarArticuloT">Agregar Nuevo Artículo</string>

    <!-- Form crear textos -->

    <string name="nombreT">Nombre: </string>
    <string name="encargadoT">Encargado: </string>
    <string name="direccionT">Dirección:</string>

    <!-- Hints -->
    <string name="nombreH">Insertar nombre</string>
    <string name="encargadoH">Insertar encargado</string>
    <string name="direccionH">Insertar dirección</string>

    <!-- Titulos Pestañas -->

    <string name="clientesT">Clientes</string>
    <string name="articulosT">Artículos</string>

    <string name="title_activity_inicio">Inicio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>