<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".articulos.articulosCreacion">

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="687dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41">

        <Space
            android:layout_width="match_parent"
            android:layout_height="102dp" />

        <TextView
            android:id="@+id/agregarT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregarArticuloT"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="102dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nombreT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/nombreT"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/nombreArticulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nombreH"
                    android:inputType="textPersonName" />

            </TableRow>

        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <Button
            android:id="@+id/articuloUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/cancelarB2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="volverInicio"
            android:text="@string/cancelarB" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>